--- a/src/my-cart/Product/component/styles.css
+++ b/src/my-cart/Product/component/styles.css
@@ -137,3 +137,33 @@ td {
     color: red;
     font-size: 18px;
 }
+
+.container-detail{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.container-detail-layout{
+    width: 50%;
+    height: auto;
+    margin-bottom:20px;
+    margin-top: 20px;
+}
+.container-detail-layout:nth-child(1){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container-detail-layout img{
+    width: 200px;
+    height: 200px;
+}
+.container-detail-layout p{
+    font-size: 24px;
+    text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 10px;
+}
